# HybridForexAI

./: .gitignore  CopilotPrompts  Project Scope and Detailed Plan.md  README.md  hyperparameter_tuning_results.json  loadModel.cpp  minimal_gui.py  ppo_custom_env_lr_0.0001_steps_1024_batch_32_epochs_5  ppo_custom_env_lr_0.0003_steps_2048_batch_64_epochs_10  pyproject.toml  requirements.txt  run_mt5.sh  udo service xrdp restart  venv.ps1
DataCollection/: DataCollectEA.mq5  DataScript1_01.mq5  DataScript1_01_Historical_FULLWEEK.mq5
DataCollection/Archived/: DataScript.mq5
DataCollection/TestData/: MarketData.csv  MarketData_LastWeek.csv
Docs/: CodeExplanation.md  CopilotPrompts.md  HybridForexAI_documentation.md  Notes.txt  PythonConnection.mql4  PythonForex-realtimeanalyze.py  PythonForex.py  RL-Suggested-Approach  TFModelForex.py  hybridAICppPython.txt
HybridForexAI.egg-info/: PKG-INFO  SOURCES.txt
Include/: DPGlobals.mqh  DPHelper.mqh  DPNNHelper.mqh
Include/Trade/: DealInfo.mqh  Object.mqh  Trade.mqh
ModelCreate/: GridSearchModeling1_01_savesmodel.py  ModelCreation.py  ModelCreation1_01-separateTrain.py  ModelCreation1_02.py  ModelTesting1_02.py
ModelCreate/Models/: best_model.joblib
cpp/: real_time_prediction.cpp
mq5/: DataCollectEA1_01.mq5  DataScript1_01.mq5  DataScript1_01_Historical_FULLWEEK.mq5
python/: MT5_scraper.py  account_gui.py  checkCUDA.py  custom_env.py  data_preparation.py  fetch_data.py  format_data.py  main_gui.py  preprocess.py  preprocess_data.py  process_prepare.py  rl_gui.py  rl_gui.spec  start_ai_train.py  train_rl_agent.py
(+206 files in other folders)
