[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HybridForexAI"
version = "1.40a"
dependencies = [
    "pandas",
    "scikit-learn",
    "appdirs",
    "numpy==1.24.3",
    "tensorflow",  # or torch==2.0.0
    "gymnasium",
    "stable-baselines3",
    "matplotlib",
    "typing-extensions==4.5.0",
    "cryptography==3.4.7",
    "metatrader5",
    "tkcalendar",
    "hmmlearn==0.3.2"
]

[tool.setuptools.packages.find]
where = ["python"]
exclude = [".venv", "logs", "__pycache__"]
